--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.6.2",
+    "http-proxy-agent": "^7.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
